# jlp-coding-challenge1

./: README.md  jlp-coding-challenge1.cabal
app/: Main.hs
src/: FormatTime.hs
test/: FormatTimeSpec.hs  Main.hs
