name:                jlp-coding-challenge1
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/jlp-coding-challenge1#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          gareth.rowlands@johnlewis.co.uk
copyright:           2019 Gareth Rowlands
category:            Challenge
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     FormatTime
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010

executable jlp-coding-challenge1
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , jlp-coding-challenge1
  default-language:    Haskell2010

test-suite jlp-coding-challenge1-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Main.hs
  build-depends:       base
                     , jlp-coding-challenge1
                     , hspec
                     , QuickCheck
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

